@@ -12,6 +12,9 @@ What's New in Python 2.7 alpha 1
 Core and Builtins
 -----------------
 
+- Issue #2183: Simplify and optimize bytecode for list comprehensions.
+  Original patch by Neal Norwitz.
+
 - Issue #4597: Fixed exception handling when the __exit__ function of a
   context manager returns a value that cannot be converted to a bool.
 
